--- a/src/app/admin/integrated/cloud/cloud.component.html
+++ b/src/app/admin/integrated/cloud/cloud.component.html
@@ -128,7 +128,7 @@
       <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
         <nz-col [nzSpan]="12">
           <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" [nzExtra]="notYetTpl">
-            <p i18n>将静态文件存储在 OSS 对象存储中，再通过 CDN 回源分发内容</p>
+            <p>将静态文件存储在 OSS 对象存储中，再通过 CDN 回源分发内容</p>
             <nz-empty nzNotFoundContent=""></nz-empty>
           </nz-card>
         </nz-col>
@@ -152,7 +152,7 @@
       <nz-row style="padding-top: 12px" [nzGutter]="[8, 8]">
         <nz-col [nzSpan]="12">
           <nz-card nzSize="small" nzType="inner" nzTitle="对象存储" [nzExtra]="notYetTpl">
-            <p i18n>将静态文件存储在 S3 对象存储中，再通过 CDN 回源分发内容</p>
+            <p>将静态文件存储在 S3 对象存储中，再通过 CDN 回源分发内容</p>
             <nz-empty nzNotFoundContent=""></nz-empty>
           </nz-card>
         </nz-col>
@@ -162,7 +162,7 @@
 </nz-card>
 
 <ng-template #unkown>
-  <span i18n>未设置</span>
+  <span>未设置</span>
 </ng-template>
 
 <ng-template #notYetTpl>
