--- a/src/app/admin/integrated/cloud/sms/sms.component.html
+++ b/src/app/admin/integrated/cloud/sms/sms.component.html
@@ -37,5 +37,5 @@
 
 <div *nzModalFooter>
   <button nz-button type="button" nzType="default" (click)="close()">取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
