--- a/src/app/common/components/nav/profile/avatar/avatar.component.html
+++ b/src/app/common/components/nav/profile/avatar/avatar.component.html
@@ -1,6 +1,6 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label i18n>头像</nz-form-label>
+    <nz-form-label>头像</nz-form-label>
     <nz-form-control>
       <wpx-upload-avatar
         wpxExt="image"
@@ -14,6 +14,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
