--- a/src/app/common/components/nav/profile/email/email.component.html
+++ b/src/app/common/components/nav/profile/email/email.component.html
@@ -1,6 +1,6 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n>电子邮件</nz-form-label>
+    <nz-form-label nzRequired>电子邮件</nz-form-label>
     <nz-form-control nzExtra="*修改后需要重新登录系统" [nzAutoTips]="tips.email">
       <input type="text" nz-input formControlName="email" placeholder="mail@example.com" />
     </nz-form-control>
@@ -8,6 +8,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
