--- a/src/app/common/components/nav/profile/name/name.component.html
+++ b/src/app/common/components/nav/profile/name/name.component.html
@@ -1,6 +1,6 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label i18n>称呼</nz-form-label>
+    <nz-form-label>称呼</nz-form-label>
     <nz-form-control nzHasFeedback>
       <input nz-input formControlName="name" placeholder="请输入称呼" />
     </nz-form-control>
@@ -8,6 +8,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
