--- a/src/app/common/components/nav/profile/password/password.component.html
+++ b/src/app/common/components/nav/profile/password/password.component.html
@@ -1,6 +1,6 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n> 旧密码 </nz-form-label>
+    <nz-form-label nzRequired> 旧密码 </nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.password">
       <nz-input-group [nzSuffix]="suffixTemplate">
         <ng-template #suffixTemplate>
@@ -17,7 +17,7 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n> 密码 </nz-form-label>
+    <nz-form-label nzRequired> 密码 </nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.password">
       <nz-input-group [nzSuffix]="suffixTemplate">
         <ng-template #suffixTemplate>
@@ -40,6 +40,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
