--- a/src/app/common/components/nav/profile/phone/phone.component.html
+++ b/src/app/common/components/nav/profile/phone/phone.component.html
@@ -1,6 +1,6 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n> 区号 </nz-form-label>
+    <nz-form-label nzRequired> 区号 </nz-form-label>
     <nz-form-control>
       <nz-select formControlName="area" nzPlaceHolder="请选择区号">
         <nz-option [nzLabel]="'+86 中国'" [nzValue]="'+86'"></nz-option>
@@ -8,13 +8,13 @@
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n> 手机号码 </nz-form-label>
+    <nz-form-label nzRequired> 手机号码 </nz-form-label>
     <nz-form-control [nzAutoTips]="tips.phone">
       <input nz-input formControlName="phone" placeholder="请输入手机号码" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n> 验证码 </nz-form-label>
+    <nz-form-label nzRequired> 验证码 </nz-form-label>
     <nz-form-control [nzAutoTips]="tips.code">
       <nz-row [nzGutter]="8">
         <nz-col [nzSpan]="12">
@@ -38,6 +38,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
+  <button nz-button type="button" nzType="default" (click)="close()">取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid">提交</button>
 </div>
