update: acc-tasks & deploy

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -22,8 +22,12 @@
           <span>消息队列</span>
         </li>
         <li nz-menu-item nzMatchRouter routerLink="imessages">
-          <span nz-icon nzType="thunderbolt" nzTheme="outline"></span>
+          <span nz-icon nzType="message" nzTheme="outline"></span>
           <span>即时通信</span>
+        </li>
+        <li nz-menu-item nzMatchRouter routerLink="acc-tasks">
+          <span nz-icon nzType="thunderbolt" nzTheme="outline"></span>
+          <span>资源加速</span>
         </li>
         <li nz-menu-item nzMatchRouter routerLink="datasets">
           <span nz-icon nzType="database" nzTheme="outline"></span>
