--- a/src/app/admin/acc-tasks/acc-tasks.component.html
+++ b/src/app/admin/acc-tasks/acc-tasks.component.html
@@ -25,6 +25,17 @@
         </ul>
       </nz-dropdown-menu>
     </ng-container>
+    <button
+      *nzSpaceItem
+      nz-button
+      nz-popconfirm
+      nzPopconfirmTitle="您确定要开始同步吗?"
+      (nzOnConfirm)="sync()"
+      [nzLoading]="syncing"
+    >
+      同步
+    </button>
+    <button *nzSpaceItem nz-button (click)="openSetting()"> 设置 </button>
     <button *nzSpaceItem nz-button nzType="primary" (click)="openForm()"> 新增 </button>
   </nz-space>
 </ng-template>
