update: [Imessage] data bridge

--- a/src/app/admin/imessages/detail/detail.component.html
+++ b/src/app/admin/imessages/detail/detail.component.html
@@ -11,7 +11,7 @@
           nzShape="circle"
           nz-tooltip="同步"
           nz-popconfirm
-          nzPopconfirmTitle="您确定要同步监控吗?"
+          nzPopconfirmTitle="您确定要同步数据桥接与监控吗?"
           (nzOnConfirm)="sync()"
         >
           <span nz-icon nzType="sync" nzTheme="outline"></span>
