update: [Imessage] improve details

--- a/src/app/admin/imessages/detail/detail.component.html
+++ b/src/app/admin/imessages/detail/detail.component.html
@@ -9,7 +9,7 @@
           nz-button
           nzType="primary"
           nzShape="circle"
-          nz-tooltip="同步"
+          nz-tooltip="重启"
           nz-popconfirm
           nzPopconfirmTitle="您确定要重启日志收集与监控吗?"
           (nzOnConfirm)="restart()"
